--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@vitejs/plugin-react": "^4.0.3",
         "autoprefixer": "^10.4.16",
         "axios": "^1.6.1",
+        "daisyui": "^4.4.19",
         "flowbite": "^2.2.0",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.32",
